--- a/test.html
+++ b/test.html
@@ -11,5 +11,6 @@
         bonjour 
     </h1>
     <p>yahya ben taher</p>
+    <a href="https://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Accueil_principal"><button>ajouter le stagiaire</button></a>
 </body>
 </html>
